Изменил главную страницу

--- a/src/templates/About.html
+++ b/src/templates/About.html
@@ -1,12 +1,1 @@
-Здравствуйте! Добро пожаловать на сайт нашей клиники! У нас вы можете:
-<ul>
-    <li>
-        +
-    </li>
-    <li>
-        +
-    </li>
-    <li>
-        +
-    </li>
-</ul>
+Здравствуйте! Добро пожаловать на сайт нашей клиники! 
